-Fixed JSON highlighting after line has been soft wrapped -Changed arrays to cyan -Added null highlighting to orange -Code formatting changes for readability

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -22,5 +22,6 @@
 @pink: #ff4081;
 @red: #ef5350;
 
-@orange: #ff6e40;
+@light-orange: #ff9e80;
+@orange: #ff8a65;
 @yellow: #fff176;
